test: 선행 테스트 수행