@@ -1,13 +1,15 @@
 package study;
 
+import static org.assertj.core.api.Assertions.assertThat;
+
+import java.io.File;
+import java.io.IOException;
+import java.net.URL;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.util.List;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-
-import java.nio.file.Path;
-import java.util.Collections;
-import java.util.List;
-
-import static org.assertj.core.api.Assertions.assertThat;
 
 /**
  * 웹서버는 사용자가 요청한 html 파일을 제공 할 수 있어야 한다.
@@ -27,8 +29,9 @@ class FileTest {
     void resource_디렉터리에_있는_파일의_경로를_찾는다() {
         final String fileName = "nextstep.txt";
 
-        // todo
-        final String actual = "";
+        URL resource = FileTest.class.getClassLoader().getResource(fileName);
+        File file = new File(resource.getPath());
+        String actual = file.getPath();
 
         assertThat(actual).endsWith(fileName);
     }
@@ -43,11 +46,17 @@ class FileTest {
     void 파일의_내용을_읽는다() {
         final String fileName = "nextstep.txt";
 
-        // todo
-        final Path path = null;
+        URL resource = FileTest.class.getClassLoader().getResource(fileName);
+        File file = new File(resource.getFile());
 
-        // todo
-        final List<String> actual = Collections.emptyList();
+        final Path path = file.toPath();
+        List<String> actual = List.of();
+
+        try {
+            actual = Files.readAllLines(path);
+        } catch (IOException e) {
+            System.out.println(e);
+        }
 
         assertThat(actual).containsOnly("nextstep");
     }
